neural_coder_workspace/bench1662020620230172/performance.log
  File "/home2/longxin/Neural_Coder_EXT/tmp.py", line 56
    input_list = []
    ^
SyntaxError: invalid syntax
